Added new css and changed the localstorage to session storage
Signed-off-by: Svetozar Mateev <svetozar.mateev@gmail.com>

--- a/packages/workspaces-ui-core/assets/css/goldenlayout-base.css
+++ b/packages/workspaces-ui-core/assets/css/goldenlayout-base.css
@@ -287,6 +287,7 @@ ul {
 }
 .lm_popout::before {
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M12.8,3h-2.7C10.1,3,10,3.1,10,3.1c0,0,0,0.1,0,0.2L10.8,4L11,4.3l-0.2,0.2L5.7,9.6c0,0,0,0.1,0,0.1 c0,0,0,0.1,0,0.1l0.5,0.5c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0l5.1-5.1L11.7,5L12,5.2L12.7,6c0,0,0.1,0,0.1,0C12.9,6,13,6,13,5.8V3.2 C13,3.1,12.9,3,12.8,3z'/%3E%3Cpath d='M11,12v0.3h-0.3H4H3.7V12V5.3V5H4h3V4.3H3.7C3.3,4.3,3,4.6,3,5v7.3C3,12.7,3.3,13,3.7,13H11 c0.4,0,0.7-0.3,0.7-0.7V9.7H11V12z'/%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M12.8,3h-2.7C10.1,3,10,3.1,10,3.1c0,0,0,0.1,0,0.2L10.8,4L11,4.3l-0.2,0.2L5.7,9.6c0,0,0,0.1,0,0.1 c0,0,0,0.1,0,0.1l0.5,0.5c0,0,0.1,0,0.1,0c0,0,0.1,0,0.1,0l5.1-5.1L11.7,5L12,5.2L12.7,6c0,0,0.1,0,0.1,0C12.9,6,13,6,13,5.8V3.2 C13,3.1,12.9,3,12.8,3z'/%3E%3Cpath d='M11,12v0.3h-0.3H4H3.7V12V5.3V5H4h3V4.3H3.7C3.3,4.3,3,4.6,3,5v7.3C3,12.7,3.3,13,3.7,13H11 c0.4,0,0.7-0.3,0.7-0.7V9.7H11V12z'/%3E%3C/svg%3E");
   content: "";
 }
 .lm_collapse::before {
@@ -325,12 +326,14 @@ ul {
   margin: 0;
   border: 0;
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M9,3h4v4l-1.3-1.6L9.9,7.4L8.6,6.1l1.9-1.8L9,3z M6.1,8.6l1.3,1.3l-1.9,1.8L7,13H3V9l1.3,1.5L6.1,8.6z'/%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M9,3h4v4l-1.3-1.6L9.9,7.4L8.6,6.1l1.9-1.8L9,3z M6.1,8.6l1.3,1.3l-1.9,1.8L7,13H3V9l1.3,1.5L6.1,8.6z'/%3E%3C/svg%3E");
 }
 .workspace_content.lm_maximise::after {
   content: none;
 }
 .workspace_content.lm_maximise.lm_restore::before {
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpolygon points='4.6,10.2 3.2,8.8 7.2,8.8 7.2,12.8 5.8,11.4 3.8,13.5 2.5,12.2 '/%3E%3Cpolygon points='13.5,3.9 11.4,5.8 12.8,7.2 8.8,7.2 8.8,3.2 10.2,4.6 12.1,2.5 '/%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpolygon points='4.6,10.2 3.2,8.8 7.2,8.8 7.2,12.8 5.8,11.4 3.8,13.5 2.5,12.2 '/%3E%3Cpolygon points='13.5,3.9 11.4,5.8 12.8,7.2 8.8,7.2 8.8,3.2 10.2,4.6 12.1,2.5 '/%3E%3C/svg%3E");
 }
 .lm_tabdropdown::before {
   width: 8px;
@@ -356,6 +359,19 @@ ul {
 }
 .lm_saveButton::before {
   mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 512 512' style='enable-background:new 0 0 512 512;' xml:space='preserve'%3E%3Cpath d='M489.5,0H22.5C9.7,0,0,9.7,0,22.5v466.9C0,502.3,9.7,512,22.5,512h466.9c12.8,0,22.5-9.7,22.5-22.5V22.5 C512,9.7,502.3,0,489.5,0L489.5,0z M32.3,480.3V159.7h207.9v320.5C240.1,480.3,32.3,480.3,32.3,480.3z M480.3,480.3h-192V159.7h192 V480.3z M480.3,128h-448V31.7h448V128z'/%3E%3C/svg%3E%0A");
+  -webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 512 512' style='enable-background:new 0 0 512 512;' xml:space='preserve'%3E%3Cpath d='M489.5,0H22.5C9.7,0,0,9.7,0,22.5v466.9C0,502.3,9.7,512,22.5,512h466.9c12.8,0,22.5-9.7,22.5-22.5V22.5 C512,9.7,502.3,0,489.5,0L489.5,0z M32.3,480.3V159.7h207.9v320.5C240.1,480.3,32.3,480.3,32.3,480.3z M480.3,480.3h-192V159.7h192 V480.3z M480.3,128h-448V31.7h448V128z'/%3E%3C/svg%3E%0A");
+  width: 12px;
+  height: 12px;
+  content: "";
+}
+.lm_hibernationIcon {
+  margin-right: 6px;
+  border-radius: none;
+  transition: none;
+}
+.lm_hibernationIcon::before {
+  mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 64 64' xml:space='preserve'%3E%3Cpath d='M37.7,38.8v-4.2l16.1-23v-0.2H39.2V5h24.6v4.5L48,32.2v0.2h16v6.4H37.7z M17,50v-2.7l10.4-14.9v-0.1H18v-4.2h15.9v2.9 L23.7,45.7v0.1h10.4V50H17z M0,59v-2l7.6-10.8v-0.1H0.7v-3h11.6v2.1L4.8,55.9V56h7.5v3H0z'/%3E%3C/svg%3E%0A");
+  -webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 64 64' xml:space='preserve'%3E%3Cpath d='M37.7,38.8v-4.2l16.1-23v-0.2H39.2V5h24.6v4.5L48,32.2v0.2h16v6.4H37.7z M17,50v-2.7l10.4-14.9v-0.1H18v-4.2h15.9v2.9 L23.7,45.7v0.1h10.4V50H17z M0,59v-2l7.6-10.8v-0.1H0.7v-3h11.6v2.1L4.8,55.9V56h7.5v3H0z'/%3E%3C/svg%3E%0A");
   width: 12px;
   height: 12px;
   content: "";
@@ -384,6 +400,7 @@ ul {
 .lm_close::before {
   content: "";
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M9.7,8.4L9.2,8c0.4-0.4,3.3-3.3,3.8-3.8c-0.2-0.2-1-1-1.2-1.2C11.3,3.4,8.4,6.4,8,6.8C7.6,6.4,4.7,3.4,4.2,3 C4,3.2,3.2,4,3,4.2C3.4,4.7,6.4,7.6,6.8,8C6.4,8.4,3.4,11.3,3,11.8c0.2,0.2,1,1,1.2,1.2C4.7,12.6,7.6,9.6,8,9.2 c0.4,0.4,3.3,3.3,3.8,3.8c0.2-0.2,1-1,1.2-1.2l-0.2-0.2L9.7,8.4z'/%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16;' xml:space='preserve'%3E%3Cpath d='M9.7,8.4L9.2,8c0.4-0.4,3.3-3.3,3.8-3.8c-0.2-0.2-1-1-1.2-1.2C11.3,3.4,8.4,6.4,8,6.8C7.6,6.4,4.7,3.4,4.2,3 C4,3.2,3.2,4,3,4.2C3.4,4.7,6.4,7.6,6.8,8C6.4,8.4,3.4,11.3,3,11.8c0.2,0.2,1,1,1.2,1.2C4.7,12.6,7.6,9.6,8,9.2 c0.4,0.4,3.3,3.3,3.8,3.8c0.2-0.2,1-1,1.2-1.2l-0.2-0.2L9.7,8.4z'/%3E%3C/svg%3E");
 }
 .lm_items {
   position: relative;
@@ -588,8 +605,6 @@ ul {
   margin-right: 6px;
   margin-left: -4px;
   padding: 3px;
-  display: flex;
-  align-items: center;
 }
 .link-icon {
   width: 13px;
@@ -597,6 +612,7 @@ ul {
   background-color: inherit;
   filter: invert(1) grayscale(1) contrast(9);
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='white' d='M301.148 394.702l-79.2 79.19c-50.778 50.799-133.037 50.824-183.84 0-50.799-50.778-50.824-133.037 0-183.84l79.19-79.2a132.833 132.833 0 0 1 3.532-3.403c7.55-7.005 19.795-2.004 20.208 8.286.193 4.807.598 9.607 1.216 14.384.481 3.717-.746 7.447-3.397 10.096-16.48 16.469-75.142 75.128-75.3 75.286-36.738 36.759-36.731 96.188 0 132.94 36.759 36.738 96.188 36.731 132.94 0l79.2-79.2.36-.36c36.301-36.672 36.14-96.07-.37-132.58-8.214-8.214-17.577-14.58-27.585-19.109-4.566-2.066-7.426-6.667-7.134-11.67a62.197 62.197 0 0 1 2.826-15.259c2.103-6.601 9.531-9.961 15.919-7.28 15.073 6.324 29.187 15.62 41.435 27.868 50.688 50.689 50.679 133.17 0 183.851zm-90.296-93.554c12.248 12.248 26.362 21.544 41.435 27.868 6.388 2.68 13.816-.68 15.919-7.28a62.197 62.197 0 0 0 2.826-15.259c.292-5.003-2.569-9.604-7.134-11.67-10.008-4.528-19.371-10.894-27.585-19.109-36.51-36.51-36.671-95.908-.37-132.58l.36-.36 79.2-79.2c36.752-36.731 96.181-36.738 132.94 0 36.731 36.752 36.738 96.181 0 132.94-.157.157-58.819 58.817-75.3 75.286-2.651 2.65-3.878 6.379-3.397 10.096a163.156 163.156 0 0 1 1.216 14.384c.413 10.291 12.659 15.291 20.208 8.286a131.324 131.324 0 0 0 3.532-3.403l79.19-79.2c50.824-50.803 50.799-133.062 0-183.84-50.802-50.824-133.062-50.799-183.84 0l-79.2 79.19c-50.679 50.682-50.688 133.163 0 183.851z'/%3E%3C/svg%3E");
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='white' d='M301.148 394.702l-79.2 79.19c-50.778 50.799-133.037 50.824-183.84 0-50.799-50.778-50.824-133.037 0-183.84l79.19-79.2a132.833 132.833 0 0 1 3.532-3.403c7.55-7.005 19.795-2.004 20.208 8.286.193 4.807.598 9.607 1.216 14.384.481 3.717-.746 7.447-3.397 10.096-16.48 16.469-75.142 75.128-75.3 75.286-36.738 36.759-36.731 96.188 0 132.94 36.759 36.738 96.188 36.731 132.94 0l79.2-79.2.36-.36c36.301-36.672 36.14-96.07-.37-132.58-8.214-8.214-17.577-14.58-27.585-19.109-4.566-2.066-7.426-6.667-7.134-11.67a62.197 62.197 0 0 1 2.826-15.259c2.103-6.601 9.531-9.961 15.919-7.28 15.073 6.324 29.187 15.62 41.435 27.868 50.688 50.689 50.679 133.17 0 183.851zm-90.296-93.554c12.248 12.248 26.362 21.544 41.435 27.868 6.388 2.68 13.816-.68 15.919-7.28a62.197 62.197 0 0 0 2.826-15.259c.292-5.003-2.569-9.604-7.134-11.67-10.008-4.528-19.371-10.894-27.585-19.109-36.51-36.51-36.671-95.908-.37-132.58l.36-.36 79.2-79.2c36.752-36.731 96.181-36.738 132.94 0 36.731 36.752 36.738 96.181 0 132.94-.157.157-58.819 58.817-75.3 75.286-2.651 2.65-3.878 6.379-3.397 10.096a163.156 163.156 0 0 1 1.216 14.384c.413 10.291 12.659 15.291 20.208 8.286a131.324 131.324 0 0 0 3.532-3.403l79.19-79.2c50.824-50.803 50.799-133.062 0-183.84-50.802-50.824-133.062-50.799-183.84 0l-79.2 79.19c-50.679 50.682-50.688 133.163 0 183.851z'/%3E%3C/svg%3E");
   mask-repeat: no-repeat;
 }
 .text {
